<resources>
    <string name="app_name">CountriesInformation</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_country">CountryActivity</string>
    <string name="title_activity_navigation_drawer">CountriesInformation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_aboutme">About Me</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shareApp">Share App</string>
    <string name="title_activity_about_me">AboutMeActivity</string>
    <string name="picture">picture</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">Personal Info</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">App Style</string>

    <!-- Messages Preferences -->
    <string name="user_key">displayed_user_name</string>
    <string name="user_name_title">Displayed Username</string>
    <string name="email_key">displayed_email</string>
    <string name="email_title">Displayed Email</string>
    <string name="picture_key">displayed_picture</string>
    <string name="picture_title">Displayed Picture</string>
    <string name="font_size">10</string>
    <string name="font_size_title">Font Size</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="font_color_key">color_key</string>
    <string name="font_color_title">Select Font Color</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_kh">kh</string>
</resources>