<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:key="@string/user_key"
        app:title="@string/user_name_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@android:drawable/ic_dialog_email"
        app:key="@string/email_key"
        app:title="@string/email_title"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:icon="@android:drawable/ic_menu_report_image"
        app:key="@string/picture_key"
        app:title="@string/picture_title"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>