<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aboutme"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_aboutme" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_shareApp"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_shareApp" />
    </group>
</menu>